--- a/Vue.js快速入门/3.4.2/my-project/index.html
+++ b/Vue.js快速入门/3.4.2/my-project/index.html
@@ -6,7 +6,7 @@
     <title>my-project</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app"></div>  <!-- 所有的页面变化都在这里 -->
     <!-- built files will be auto injected -->
   </body>
 </html>
