--- a/bootstrap/L02-Exercise/index.html
+++ b/bootstrap/L02-Exercise/index.html
@@ -65,11 +65,11 @@
                 <div class="collapse navbar-collapse" id="lk_nav">
                     <ul class="nav navbar-nav">
                         <li class="active"><a href="javascript:;">关于我</a></li>
-                        <li><a href="javascript:;">课程介绍</a></li>
-                        <li><a href="javascript:;">已学课程</a></li>
-                        <li><a href="javascript:;">名师授课</a></li>
-                        <li><a href="javascript:;">课堂互动</a></li>
-                        <li><a href="javascript:;">联系我们</a></li>
+                        <li><a href="javascript:;">紫薯布丁1</a></li>
+                        <li><a href="javascript:;">紫薯布丁2</a></li>
+                        <li><a href="javascript:;">紫薯布丁3</a></li>
+                        <li><a href="javascript:;">紫薯布丁4</a></li>
+                        <li><a href="javascript:;">紫薯布丁5</a></li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right hidden-sm hidden-xs">
                         <li><a href="#">个人中心</a></li>
@@ -110,7 +110,7 @@
     <!-- /轮播图 -->
 
 
-    <!-- 关于我们 -->
+    <!-- 关于我 -->
     <section id="lk_about" class="hidden-xs hidden-sm">
         <!-- 标题 -->
         <div class="title text-center">
@@ -166,7 +166,7 @@
                                 </div>
                                 <!-- 第二部分 -->
                                 <ol class="breadcrumb lead" id="pd_one_2">
-                                    <li><a href="https://www.bilibili.com/video/av45705742?from=search&seid=13275520603499315532" target="_blank">HTM5+全栈</a></li>
+                                    <li><a href="https://www.bilibili.com/video/av45705742?from=search&seid=13275520603499315532" target="_blank">H5+全栈</a></li>
                                     <li><a href="https://www.bilibili.com/video/av27670326?from=search&seid=10150760197015812178" target="_blank">NodeJS</a></li>
                                     <li><a href="https://www.bilibili.com/video/av19956343?from=search&seid=10150760197015812178" target="_blank">Python</a></li>
                                     <li><a href="https://www.bilibili.com/video/av37467167" target="_blank">H5+C3</a></li>
@@ -240,20 +240,20 @@
                             <div class="col-md-6 pd-left">
                                 <h1>
                                     <strong class="text-danger">
-                                        案例驱动·体系贯穿·全面系统
+                                        从案例入手·书籍为辅·从实践中发现不足并改进
                                     </strong>
                                 </h1>
                                 <h3>
-                                    10-15分钟的视频
+                                    快速学习
                                     <strong class="text-warning">
-                                        知识点拆分讲解
+                                        哪里感兴趣,学哪里.
                                     </strong>
                                 </h3>
                                 <h4>
-                                    玩转HTML5+全栈系列, 玩转Python + 人工智能系列,玩转JavaEE系列, 玩转Go+区块链系列
+                                    leetcode刷算法,视频学习积累实战经验,书籍补充理论基础
                                 </h4>
                                 <div class="badge" style="padding:15px 10px;cursor:pointer">
-                                    已更新3000+视频 | 100000+人订阅
+                                    已发博客200+篇 | CSDN排名9W+
                                 </div>
                             </div>
                             <div class="col-md-6 hidden-sm hidden-xs">
@@ -271,7 +271,7 @@
     <section id="lk_hot">
         <!-- 标题 -->
         <div class="title text-center">
-            <h1><strong>已学课程</strong></h1>
+            <h1><strong>紫薯布丁2</strong></h1>
             <img src="./imgs/star.jpg" class="img-responsive" width="100">
         </div>
         <!-- 主要内容 -->
@@ -287,14 +287,14 @@
                         <div class="media-body">
                             <h4 class="media-heading">
                                 <span class="text-danger">【热】</span>
-                                从零玩转HTML5+跨平台
+                                紫薯布丁 + 布丁紫薯
                             </h4>
                             <p class="text-muted">
-                                从零基础入门大前端开发...
+                                从零开始,逐步走向大前端...
                             </p>
                         </div>
                         <div class="media-right">
-                            <p class="text-danger">206节课</p>
+                            <p class="text-danger">206小时</p>
                         </div>
                     </div>
                 </div>
@@ -308,10 +308,54 @@
                         <div class="media-body">
                             <h4 class="media-heading">
                                 <span class="text-danger">【热】</span>
-                                从零玩转HTML5+跨平台
+                                紫薯布丁 + 布丁紫薯
                             </h4>
                             <p class="text-muted">
-                                从零基础入门大前端开发...
+                                从零开始,逐步走向大前端...
+                            </p>
+                        </div>
+                        <div class="media-right">
+                            <p class="text-danger">206小时</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6 lz_lesson">
+                    <div class="media">
+                        <div class="media-left">
+                            <a href="#">
+                                <img class="media-object img-circle img-responsive img-thumbnail" src="./imgs/p1.JPG" alt="" width="100">
+                            </a>
+                        </div>
+                        <div class="media-body">
+                            <h4 class="media-heading">
+                                <span class="text-danger">【热】</span>
+                                紫薯布丁 + 布丁紫薯
+                            </h4>
+                            <p class="text-muted">
+                                从零开始,逐步走向大前端...
+                            </p>
+                        </div>
+                        <div class="media-right">
+                            <p class="text-danger">206小时</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 lz_lesson">
+                    <div class="media">
+                        <div class="media-left">
+                            <a href="#">
+                                <img class="media-object img-circle img-responsive img-thumbnail" src="./imgs/p1.JPG" alt="" width="100">
+                            </a>
+                        </div>
+                        <div class="media-body">
+                            <h4 class="media-heading">
+                                <span class="text-danger">【热】</span>
+                                紫薯布丁 + 布丁紫薯
+                            </h4>
+                            <p class="text-muted">
+                                从零开始,逐步走向大前端...
                             </p>
                         </div>
                         <div class="media-right">
@@ -331,14 +375,14 @@
                         <div class="media-body">
                             <h4 class="media-heading">
                                 <span class="text-danger">【热】</span>
-                                从零玩转HTML5+跨平台
+                                紫薯布丁 + 布丁紫薯
                             </h4>
                             <p class="text-muted">
-                                从零基础入门大前端开发...
+                                从零开始,逐步走向大前端...
                             </p>
                         </div>
                         <div class="media-right">
-                            <p class="text-danger">206节课</p>
+                            <p class="text-danger">206小时</p>
                         </div>
                     </div>
                 </div>
@@ -352,58 +396,14 @@
                         <div class="media-body">
                             <h4 class="media-heading">
                                 <span class="text-danger">【热】</span>
-                                从零玩转HTML5+跨平台
+                                紫薯布丁 + 布丁紫薯
                             </h4>
                             <p class="text-muted">
-                                从零基础入门大前端开发...
+                                从零开始,逐步走向大前端...
                             </p>
                         </div>
                         <div class="media-right">
-                            <p class="text-danger">206节课</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-6 lz_lesson">
-                    <div class="media">
-                        <div class="media-left">
-                            <a href="#">
-                                <img class="media-object img-circle img-responsive img-thumbnail" src="./imgs/p1.JPG" alt="" width="100">
-                            </a>
-                        </div>
-                        <div class="media-body">
-                            <h4 class="media-heading">
-                                <span class="text-danger">【热】</span>
-                                从零玩转HTML5+跨平台
-                            </h4>
-                            <p class="text-muted">
-                                从零基础入门大前端开发...
-                            </p>
-                        </div>
-                        <div class="media-right">
-                            <p class="text-danger">206节课</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-6 lz_lesson">
-                    <div class="media">
-                        <div class="media-left">
-                            <a href="#">
-                                <img class="media-object img-circle img-responsive img-thumbnail" src="./imgs/p1.JPG" alt="" width="100">
-                            </a>
-                        </div>
-                        <div class="media-body">
-                            <h4 class="media-heading">
-                                <span class="text-danger">【热】</span>
-                                从零玩转HTML5+跨平台
-                            </h4>
-                            <p class="text-muted">
-                                从零基础入门大前端开发...
-                            </p>
-                        </div>
-                        <div class="media-right">
-                            <p class="text-danger">206节课</p>
+                            <p class="text-danger">206小时</p>
                         </div>
                     </div>
                 </div>
