--- a/Kvue/index.html
+++ b/Kvue/index.html
@@ -20,7 +20,7 @@
         <!-- 双向绑定实现 -->
         <input type="text" l-model="name" />
         <!-- 事件处理 -->
-        <button @click="changeName">嘿嘿</button>
+        <button @click="changeName">点我改变名字和年龄</button>
         <!-- html内容解析 -->
         <div l-html="html"></div>
     </div>
